[package]
name = "ca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ca"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.29.1"
inn-common={path="/Users/vv/proj/rust/inn/inn-common", version="0.2.1"}